// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Datasets API Upload should fail on wrong JSON 1`] = `
Object {
  "body": Object {
    "error": "Non-public error: Invalid JSON (Unexpected \\"a\\" at position 2 in state STOP)",
  },
  "statusCode": 500,
}
`;

exports[`Datasets API Upload should fail when file extension differs from file format 1`] = `
Object {
  "body": Object {
    "error": "Non-public error: Invalid JSON (Unexpected \\"P\\" at position 0 in state STOP)",
  },
  "statusCode": 500,
}
`;

exports[`Datasets API Upload should fail when id of datasource not found 1`] = `
Object {
  "body": Object {
    "error": "Non-public error: Could not find datasource description.",
  },
  "statusCode": 500,
}
`;

exports[`Datasets API Upload should fail when upload a csv file with wrong format: wrongCSVFormat.csv 1`] = `
Object {
  "body": Object {
    "error": "Wrong number of columns, expected at least 2, found 1",
  },
  "statusCode": 500,
}
`;

exports[`Datasets API Upload should fail when upload a replacement file when file extension differs from file format 1`] = `
Object {
  "body": Object {
    "error": "Non-public error: Invalid JSON (Unexpected \\"P\\" at position 0 in state STOP)",
  },
  "statusCode": 500,
}
`;

exports[`Datasets API Upload should fail when upload the replacement with file of different columns numbers 1`] = `
Object {
  "body": Object {
    "error": "Datasources are not compatible. Can't have fewer columns than previous datasource.",
  },
  "statusCode": 500,
}
`;

exports[`Datasets API Upload should upload a replacement file: pokemonGO.csv 1`] = `
Object {
  "_id": Any<String>,
  "columns": Array [
    Object {
      "data_type": "Text",
      "name": "Image URL",
      "operation": "ToString",
      "sourceName": "pokemonGO.csv",
    },
    Object {
      "data_type": "Number",
      "name": "Max HP",
      "operation": "ToInteger",
      "sourceName": "pokemonGO.csv",
    },
    Object {
      "data_type": "Number",
      "name": "Max CP",
      "operation": "ToInteger",
      "sourceName": "pokemonGO.csv",
    },
    Object {
      "data_type": "Text",
      "name": "Type 2",
      "operation": "ToString",
      "sourceName": "pokemonGO.csv",
    },
    Object {
      "data_type": "Text",
      "name": "Type 1",
      "operation": "ToString",
      "sourceName": "pokemonGO.csv",
    },
    Object {
      "data_type": "Text",
      "name": "Name",
      "operation": "ToString",
      "sourceName": "pokemonGO.csv",
    },
    Object {
      "data_type": "Number",
      "name": "Pokemon No_",
      "operation": "ToInteger",
      "sourceName": "pokemonGO.csv",
    },
  ],
  "fe_excludeFields": Object {
    "Image URL": false,
    "Max CP": false,
    "Max HP": false,
    "Name": false,
    "Pokemon No_": false,
    "Type 1": false,
    "Type 2": false,
  },
  "fe_excludeFieldsObjDetail": Object {
    "Image URL": false,
    "Max CP": false,
    "Max HP": false,
    "Name": false,
    "Pokemon No_": false,
    "Type 1": false,
    "Type 2": false,
  },
  "fileName": "pokemonGO.csv",
  "format": "CSV",
  "jobId": 0,
  "missingSamples": Array [],
  "overrideColumns": Array [],
  "raw_rowObjects_coercionScheme": Object {
    "Image URL": Object {
      "operation": "ToString",
    },
    "Max CP": Object {
      "operation": "ToInteger",
    },
    "Max HP": Object {
      "operation": "ToInteger",
    },
    "Name": Object {
      "operation": "ToString",
    },
    "Pokemon No_": Object {
      "operation": "ToInteger",
    },
    "Type 1": Object {
      "operation": "ToString",
    },
    "Type 2": Object {
      "operation": "ToString",
    },
  },
  "replaced_id": "5a42c26e303770207ce8f83b",
  "replacement": true,
  "uid": "pokemon-draft",
  "user": Object {
    "__v": 0,
    "_articleEditors": Array [],
    "_articleViewers": Array [],
    "_editors": Array [],
    "_id": "5a42bf07d3bc0b20648290e0",
    "_siteEditors": Array [],
    "_siteViewers": Array [],
    "_team": Array [
      "5a42bf30d3bc0b20648290e1",
    ],
    "_viewers": Array [],
    "activated": true,
    "active": true,
    "canCreateNewArticle": Array [],
    "canCreateNewSite": Array [],
    "canCreateNewViz": Array [],
    "createdAt": "2017-12-26T21:28:39.946Z",
    "defaultLoginTeam": "5a42bf30d3bc0b20648290e1",
    "email": "user@schemadesign.com",
    "firstName": "Maitland",
    "hash": "dc449e96c930ca46653ec867c448719fab39dd85c4b91c1643d2faad140f24e711da13133e34ee4da0d3a5a2ca154edd4bfaeb9cf80cb9af57bce4d7ea1b94ce",
    "lastName": "McConnell",
    "lockUntil": 1,
    "loginAttempts": 0,
    "provider": "local",
    "salt": "test",
    "sampleImported": false,
    "signedUp": false,
    "updatedAt": "2017-12-26T21:36:31.420Z",
  },
}
`;

exports[`Datasets API Upload should upload child dataset: childPokemon.csv 1`] = `
Object {
  "_id": Any<String>,
  "columns": Array [
    Object {
      "data_type": "Number",
      "name": "Pokemon No",
      "operation": "ToInteger",
      "sample": 152,
      "sourceName": "childPokemon.csv",
      "sourceType": "spreadsheet",
    },
    Object {
      "data_type": "Text",
      "name": "Name",
      "operation": "ToString",
      "sample": "Maitland",
      "sourceName": "childPokemon.csv",
      "sourceType": "spreadsheet",
    },
  ],
  "fe_excludeFields": Object {
    "Name": false,
    "Pokemon No": false,
  },
  "fe_excludeFieldsObjDetail": Object {
    "Name": false,
    "Pokemon No": false,
  },
  "fileName": "childPokemon.csv",
  "format": "CSV",
  "jobId": 0,
  "missingSamples": Array [],
  "overrideColumns": Array [],
  "raw_rowObjects_coercionScheme": Object {
    "Name": Object {
      "operation": "ToString",
    },
    "Pokemon No": Object {
      "operation": "ToInteger",
    },
  },
  "replacement": false,
  "uid": "pokemon",
}
`;

exports[`Datasets API Upload should upload dataset: pokemonGO.csv 1`] = `
Object {
  "body": Object {
    "columns": Array [
      Object {
        "data_type": "Number",
        "name": "Pokemon No_",
        "operation": "ToInteger",
        "sample": 1,
        "sourceName": "pokemonGO.csv",
        "sourceType": "spreadsheet",
      },
      Object {
        "data_type": "Text",
        "name": "Name",
        "operation": "ToString",
        "sample": "Bulbasaur",
        "sourceName": "pokemonGO.csv",
        "sourceType": "spreadsheet",
      },
      Object {
        "data_type": "Text",
        "name": "Type 1",
        "operation": "ToString",
        "sample": "Grass",
        "sourceName": "pokemonGO.csv",
        "sourceType": "spreadsheet",
      },
      Object {
        "data_type": "Text",
        "name": "Type 2",
        "operation": "ToString",
        "sample": "Poison",
        "sourceName": "pokemonGO.csv",
        "sourceType": "spreadsheet",
      },
      Object {
        "data_type": "Number",
        "name": "Max CP",
        "operation": "ToInteger",
        "sample": 1079,
        "sourceName": "pokemonGO.csv",
        "sourceType": "spreadsheet",
      },
      Object {
        "data_type": "Number",
        "name": "Max HP",
        "operation": "ToInteger",
        "sample": 83,
        "sourceName": "pokemonGO.csv",
        "sourceType": "spreadsheet",
      },
      Object {
        "data_type": "Text",
        "name": "Image URL",
        "operation": "ToString",
        "sample": "http://cdn.bulbagarden.net/upload/thumb/2/21/001Bulbasaur.png/250px-001Bulbasaur.png",
        "sourceName": "pokemonGO.csv",
        "sourceType": "spreadsheet",
      },
    ],
    "fe_excludeFields": Object {
      "Image URL": false,
      "Max CP": false,
      "Max HP": false,
      "Name": false,
      "Pokemon No_": false,
      "Type 1": false,
      "Type 2": false,
    },
    "fe_excludeFieldsObjDetail": Object {
      "Image URL": false,
      "Max CP": false,
      "Max HP": false,
      "Name": false,
      "Pokemon No_": false,
      "Type 1": false,
      "Type 2": false,
    },
    "fileName": "pokemonGO.csv",
    "format": "CSV",
    "jobId": 0,
    "missingSamples": Array [],
    "overrideColumns": Array [],
    "raw_rowObjects_coercionScheme": Object {
      "Image URL": Object {
        "operation": "ToString",
      },
      "Max CP": Object {
        "operation": "ToInteger",
      },
      "Max HP": Object {
        "operation": "ToInteger",
      },
      "Name": Object {
        "operation": "ToString",
      },
      "Pokemon No_": Object {
        "operation": "ToInteger",
      },
      "Type 1": Object {
        "operation": "ToString",
      },
      "Type 2": Object {
        "operation": "ToString",
      },
    },
    "replacement": false,
    "uid": "newviztest",
  },
  "statusCode": 200,
}
`;

exports[`Datasets API Upload should upload multiline dataset: multiLine.csv 1`] = `
Object {
  "_id": Any<String>,
  "columns": Array [
    Object {
      "data_type": "Number",
      "name": "line",
      "operation": "ToInteger",
      "sample": 1,
      "sourceName": "multiLine.csv",
      "sourceType": "spreadsheet",
    },
    Object {
      "data_type": "Text",
      "name": "text",
      "operation": "ToString",
      "sample": "this line has more than one line of text",
      "sourceName": "multiLine.csv",
      "sourceType": "spreadsheet",
    },
  ],
  "fe_excludeFields": Object {
    "line": false,
    "text": false,
  },
  "fe_excludeFieldsObjDetail": Object {
    "line": false,
    "text": false,
  },
  "fileName": "multiLine.csv",
  "format": "CSV",
  "jobId": 0,
  "missingSamples": Array [],
  "overrideColumns": Array [],
  "raw_rowObjects_coercionScheme": Object {
    "line": Object {
      "operation": "ToInteger",
    },
    "text": Object {
      "operation": "ToString",
    },
  },
  "replacement": false,
  "uid": "pokemon",
}
`;

exports[`Datasets API Upload should upload valid JSON dataset: allDataTypes.json 1`] = `
Object {
  "body": Object {
    "columns": Array [
      Object {
        "data_type": "Date",
        "input_format": "YYYY-MM-DD",
        "name": "Date",
        "operation": "ToDate",
        "output_format": "YYYY-MM-DD",
        "sample": "2018-01-01T00:00:00.000Z",
        "sourceName": "allDataTypes.json",
        "sourceType": "spreadsheet",
      },
      Object {
        "data_type": "Number",
        "name": "Number",
        "operation": "ToInteger",
        "sample": 1,
        "sourceName": "allDataTypes.json",
        "sourceType": "spreadsheet",
      },
      Object {
        "data_type": "Text",
        "name": "String",
        "operation": "ToString",
        "sample": "IAmString1",
        "sourceName": "allDataTypes.json",
        "sourceType": "spreadsheet",
      },
    ],
    "fe_excludeFields": Object {
      "Date": false,
      "Number": false,
      "String": false,
    },
    "fe_excludeFieldsObjDetail": Object {
      "Date": false,
      "Number": false,
      "String": false,
    },
    "fileName": "allDataTypes.json",
    "format": "JSON",
    "jobId": 0,
    "missingSamples": Array [],
    "overrideColumns": Array [],
    "raw_rowObjects_coercionScheme": Object {
      "Date": Object {
        "format": "YYYY-MM-DD",
        "operation": "ToDate",
        "outputFormat": "YYYY-MM-DD",
      },
      "Number": Object {
        "operation": "ToInteger",
      },
      "String": Object {
        "operation": "ToString",
      },
    },
    "replacement": false,
    "uid": "newviz-json",
  },
  "statusCode": 200,
}
`;

exports[`Datasets API Upload should upload valid nested JSON dataset: nestedArray.json 1`] = `
Object {
  "body": Object {
    "columns": Array [
      Object {
        "data_type": "Date",
        "input_format": "YYYY-MM-DD",
        "name": "Date",
        "operation": "ToDate",
        "output_format": "YYYY-MM-DD",
        "sample": "2018-01-01T00:00:00.000Z",
        "sourceName": "allDataTypes.json",
        "sourceType": "spreadsheet",
      },
      Object {
        "data_type": "Number",
        "name": "Number",
        "operation": "ToInteger",
        "sample": 1,
        "sourceName": "allDataTypes.json",
        "sourceType": "spreadsheet",
      },
      Object {
        "data_type": "Text",
        "name": "String",
        "operation": "ToString",
        "sample": "IAmString1",
        "sourceName": "allDataTypes.json",
        "sourceType": "spreadsheet",
      },
    ],
    "fe_excludeFields": Object {
      "Date": false,
      "Number": false,
      "String": false,
    },
    "fe_excludeFieldsObjDetail": Object {
      "Date": false,
      "Number": false,
      "String": false,
    },
    "fileName": "allDataTypes.json",
    "format": "JSON",
    "jobId": 0,
    "missingSamples": Array [],
    "overrideColumns": Array [],
    "raw_rowObjects_coercionScheme": Object {
      "Date": Object {
        "format": "YYYY-MM-DD",
        "operation": "ToDate",
        "outputFormat": "YYYY-MM-DD",
      },
      "Number": Object {
        "operation": "ToInteger",
      },
      "String": Object {
        "operation": "ToString",
      },
    },
    "replacement": false,
    "uid": "newviz-json",
  },
  "statusCode": 200,
}
`;
